[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/font/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://theme/blue_button.tres" type="StyleBox" id=2]
[ext_resource path="res://theme/blue_button_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://dialogs/ConfirmDialog.gd" type="Script" id=4]
[ext_resource path="res://dialogs/DialogBackground.tres" type="Texture" id=5]
[ext_resource path="res://dialogs/DialogBackdrop.tscn" type="PackedScene" id=6]

[node name="ConfirmDialog" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -500.0
margin_right = 500.0
margin_bottom = 500.0
input_pass_on_modal_close_click = false
script = ExtResource( 4 )

[node name="DialogBackdrop" parent="." instance=ExtResource( 6 )]

[node name="Bg" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -325.0
margin_right = 500.0
margin_bottom = 325.0
rect_min_size = Vector2( 1000, 650 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 7

[node name="VBox" type="VBoxContainer" parent="Bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -300.0
margin_right = 410.0
margin_bottom = 300.0
rect_min_size = Vector2( 800, 600 )

[node name="Spacer" type="CenterContainer" parent="Bg/VBox"]
margin_right = 845.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="Text" type="RichTextLabel" parent="Bg/VBox"]
margin_top = 154.0
margin_right = 845.0
margin_bottom = 404.0
rect_min_size = Vector2( 400, 250 )
custom_colors/default_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/bold_font = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 1 )
text = "Message to confirm "

[node name="Hbox" type="HBoxContainer" parent="Bg/VBox"]
margin_top = 408.0
margin_right = 845.0
margin_bottom = 558.0
rect_min_size = Vector2( 400, 100 )
rect_pivot_offset = Vector2( -1294, -278 )
custom_constants/separation = 45
alignment = 1

[node name="Confirm" type="Button" parent="Bg/VBox/Hbox"]
margin_right = 400.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Confirm"

[node name="Cancel" type="Button" parent="Bg/VBox/Hbox"]
margin_left = 445.0
margin_right = 845.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Cancel"

[connection signal="about_to_show" from="." to="." method="_on_ConfirmDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_ConfirmDialog_popup_hide"]
[connection signal="pressed" from="Bg/VBox/Hbox/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Bg/VBox/Hbox/Cancel" to="." method="_on_Cancel_pressed"]
